--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 *.iml
 .gradle
+.idea/
+gradlew
+gradlew.bat
+gradle/
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
+将删除 app/libs/
